# phenoUtils

./: AGENTS.md  Cargo.toml  FUNCTIONAL_REQUIREMENTS.md  README.md  SECURITY.md  SPEC.md  audit_scorecard.json  deny.toml  justfile
.github/: dependabot.yml
.github/workflows/: cargo-audit.yml  cargo-deny.yml  cargo-semver-checks.yml  ci.yml  codeql-rust.yml  codeql.yml  doc-links.yml  fr-coverage.yml  scorecard.yml  security.yml  trufflehog.yml
archive/PhenoLang-primitives-2026-06-20/: ORIGIN.md
archive/PhenoLang-primitives-2026-06-20/crates/phenotype-async-traits/: Cargo.toml
archive/PhenoLang-primitives-2026-06-20/crates/phenotype-async-traits/src/: lib.rs
archive/PhenoLang-primitives-2026-06-20/crates/phenotype-cache-adapter/: Cargo.toml
archive/PhenoLang-primitives-2026-06-20/crates/phenotype-cache-adapter/examples/: usage.rs
archive/PhenoLang-primitives-2026-06-20/crates/phenotype-cache-adapter/src/: lib.rs
archive/PhenoLang-primitives-2026-06-20/crates/phenotype-cost-core/: Cargo.toml
archive/PhenoLang-primitives-2026-06-20/crates/phenotype-cost-core/src/: analyzer.rs  budget.rs  cost.rs  errors.rs  lib.rs  model.rs  types.rs
archive/PhenoLang-primitives-2026-06-20/crates/phenotype-crypto/: Cargo.toml
archive/PhenoLang-primitives-2026-06-20/crates/phenotype-crypto/src/: lib.rs
archive/PhenoLang-primitives-2026-06-20/crates/phenotype-git-core/: CLAUDE.md  Cargo.toml
archive/PhenoLang-primitives-2026-06-20/crates/phenotype-git-core/src/: lib.rs
archive/PhenoLang-primitives-2026-06-20/crates/phenotype-http-client-core/: Cargo.toml
archive/PhenoLang-primitives-2026-06-20/crates/phenotype-http-client-core/src/: lib.rs
archive/PhenoLang-primitives-2026-06-20/crates/phenotype-iter/: Cargo.toml
archive/PhenoLang-primitives-2026-06-20/crates/phenotype-iter/src/: adapters.rs  lib.rs
archive/PhenoLang-primitives-2026-06-20/crates/phenotype-macros/: Cargo.toml
archive/PhenoLang-primitives-2026-06-20/crates/phenotype-macros/src/: async_trait_wrapper.rs  error_derive.rs  lib.rs
archive/PhenoLang-primitives-2026-06-20/crates/phenotype-macros/tests/: builder_integration_test.rs  macro_integration_tests.rs
archive/PhenoLang-primitives-2026-06-20/crates/phenotype-process/: Cargo.toml
archive/PhenoLang-primitives-2026-06-20/crates/phenotype-process/src/: lib.rs
archive/PhenoLang-primitives-2026-06-20/crates/phenotype-rate-limit/: Cargo.toml
archive/PhenoLang-primitives-2026-06-20/crates/phenotype-rate-limit/src/: lib.rs
archive/PhenoLang-primitives-2026-06-20/crates/phenotype-retry/: Cargo.toml
archive/PhenoLang-primitives-2026-06-20/crates/phenotype-retry/src/: backoff.rs  executor.rs  lib.rs  policy.rs  tests.rs
archive/PhenoLang-primitives-2026-06-20/crates/phenotype-string/: Cargo.toml
archive/PhenoLang-primitives-2026-06-20/crates/phenotype-string/src/: compression.rs  lib.rs  normalization.rs  parse.rs  sanitize.rs
archive/PhenoLang-primitives-2026-06-20/crates/phenotype-string/src/join/: mod.rs
archive/PhenoLang-primitives-2026-06-20/crates/phenotype-test-infra/: Cargo.toml
archive/PhenoLang-primitives-2026-06-20/crates/phenotype-test-infra/src/: assertions.rs  bdd.rs  fixtures.rs  lib.rs
archive/PhenoLang-primitives-2026-06-20/crates/phenotype-time/: Cargo.toml
archive/PhenoLang-primitives-2026-06-20/crates/phenotype-time/src/: duration.rs  lib.rs  timestamp.rs
archive/PhenoLang-primitives-2026-06-20/crates/phenotype-validation/: Cargo.toml
archive/PhenoLang-primitives-2026-06-20/crates/phenotype-validation/src/: lib.rs
crates/pheno-crypto/: Cargo.toml
crates/pheno-crypto/src/: lib.rs
crates/pheno-fs/: Cargo.toml
crates/pheno-fs/src/: lib.rs
crates/pheno-net/: Cargo.toml
crates/pheno-net/src/: lib.rs
crates/pheno-schema-port/src/adapters/: json_schema.rs  zod.rs
crates/pheno-schema-port/tests/: schema.rs
crates/pheno-shell/src/: lib.rs
crates/pheno-testing/: Cargo.toml
crates/pheno-testing/src/: lib.rs
docs/: index.md  phenolang-monorepo-index.md
docs/boundary/: phenoUtils.md
docs/intent/: phenoUtils.md
