[package]
name = "phenotype-cache-adapter"
version = "0.2.0"
edition = "2021"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
moka = { version = "0.12", features = ["sync"] }
lru = "0.16"
dashmap = "5"
tokio = { version = "1", features = ["sync", "rt"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
