[package]
name = "phenotype-crypto"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Phenotype Team"]
repository = "https://github.com/KooshaPari/phenotype-infrakit"
description = "Cryptographic utilities for Phenotype — hashing, symmetric encryption, key derivation, and HMAC signatures"

[dependencies]
sha2 = "0.10"
hex = "0.4"
blake3 = "1.5"
thiserror = "2.0"
aes-gcm = "0.10"
pbkdf2 = "0.12"
rand = "0.8"
hmac = "0.12"
zeroize = "1.7"
ed25519-dalek = { version = "2.1", features = ["std"] }

[lib]
path = "src/lib.rs"
