[package]
name = "phenotype-http-client-core"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.75"
repository = "https://github.com/KooshaPari/phenotype-infrakit"
authors = ["Phenotype Team"]
description = "Unified HTTP client patterns and pooling strategies for Phenotype ecosystem"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["sync", "rt", "macros"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"], optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
