[package]
name = "phenotype-string"
version = "0.2.0"
edition = "2021"
license = "MIT"


[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
thiserror.workspace = true
zstd.workspace = true
regex.workspace = true
unicode-normalization.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
