[package]
name = "phenotype-test-infra"
version = "0.2.0"
edition = "2021"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
default = ["chrono"]
chrono = ["dep:chrono"]
