[package]
name = "phenotype-time"
version = "0.2.0"
edition = "2021"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
