[package]
name = "phenotype-validation"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
[lib]
path = "src/lib.rs"
[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
regex.workspace = true
parking_lot.workspace = true
[dev-dependencies]
tokio.workspace = true
